--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <style>
       #lbl {
         display: flex;
-        font-family: sans-serif;
+        font-family: monospace;
         font-size: 18pt;
-        color: #ff5757;
+        color: #F5CAD4;
         padding: 5px;
         border: 1px solid #ffffff;
         justify-content: left;
